--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ body,
 
 #app {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .box {
