--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ body,
 
 #app {
   display: flex;
+  flex-wrap: wrap-reverse;
 }
 
 .box {
-  width: 300px;
+  width: 150px;
   height: 60px;
   background: #f00;
   margin: 5px;
-  flex: 1;
 }
